--- a/catering-services/app/globals.css
+++ b/catering-services/app/globals.css
@@ -2,7 +2,10 @@
 @import "tw-animate-css";
 
 @custom-variant dark (&:is(.dark *));
-
+html,
+body{
+  @apply h-full
+}
 @theme inline {
   --radius-sm: calc(var(--radius) - 4px);
   --radius-md: calc(var(--radius) - 2px);
